external jar functional